Add my-app-window component to desktop

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   <title>Examination Assignment - PWD</title>
   <script type="module" src="./js/components/my-desktop/index.js"></script>
+  <script type="module" src="./js/components/my-app-window/index.js"></script>
   <script type="module" src="./js/index.js"></script>
 </head>
 
