Add memory game to an application window

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <title>Examination Assignment - PWD</title>
   <script type="module" src="./js/components/my-desktop/index.js"></script>
   <script type="module" src="./js/components/my-app-window/index.js"></script>
+  <script type="module" src="./js/components/my-memory-game-flipping-card/index.js"></script>
+  <script type="module" src="./js/components/my-memory-game/index.js"></script>
   <script type="module" src="./js/index.js"></script>
 </head>
 
