--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-  <!-- <my-desktop></my-desktop> -->
-  <my-chat-app></my-chat-app>
+  <my-desktop></my-desktop>
+  <!-- <my-chat-app></my-chat-app> -->
 </body>
 
 </html>
