--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
   <script type="module" src="./js/components/my-memory-game-flipping-card/index.js"></script>
   <script type="module" src="./js/components/my-memory-game/index.js"></script>
   <script type="module" src="./js/components/my-chat-app/index.js"></script>
+  <script type="module" src="./js/components/my-custom-app/index.js"></script>
   <script type="module" src="./js/index.js"></script>
 </head>
 
 <body>
   <my-desktop></my-desktop>
-  <!-- <my-chat-app></my-chat-app> -->
 </body>
 
 </html>
